# GPTchatAllRepo

./: .gitignore  AGENTS.md  README.md
.github/workflows/: etap-low-voltage-agent.yml  gridfault-copilot.yml  low-voltage-product.yml  mac-readonly-doc-viewer.yml  portable-assistant.yml  wechat-flow-agent.yml  wps-mac-reader-addon.yml
docs/conversations/: 2026-07-16-sleep-sense.md  2026-07-17-low-voltage-governance-product.md
projects/dual-brain-agent/: .env.example  .gitignore  README.md  pyproject.toml
projects/dual-brain-agent/dual_brain/: __init__.py  models.py  orchestrator.py  prompts.py  provider.py  server.py
projects/dual-brain-agent/static/: app.js  index.html  styles.css
projects/dual-brain-agent/tests/: test_orchestrator.py
projects/etap-low-voltage-agent/: README.md  pyproject.toml
projects/etap-low-voltage-agent/config/: etap.example.json
projects/etap-low-voltage-agent/data/: sample_results.json  study_request.example.json
projects/etap-low-voltage-agent/etap_lv/: __init__.py  cli.py  client.py  domain.py  ranking.py  runner.py
projects/etap-low-voltage-agent/tests/: test_core.py
projects/geo-style-map-agent/: README.md  pyproject.toml
projects/geo-style-map-agent/skill/: SKILL.md
projects/geo-style-map-agent/src/geo_style_map/: __init__.py  cli.py  osm.py  render.py
projects/geo-style-map-agent/tests/: test_render.py
projects/gridfault-copilot/: README.md  SUBMISSION.md  index.html  server.py
projects/low-voltage-governance-product/: README.md
projects/mac-readonly-doc-viewer/: README.md  install.sh  readonly-viewer.applescript  test.sh  uninstall.sh
projects/meet-once-mvp/: PRODUCT.md  README.md  app.js  index.html  styles.css
projects/portable-assistant/: .env.example  .gitignore  README.md  config.example.json  pyproject.toml
projects/portable-assistant/identity/: core.md
projects/portable-assistant/skills/truth-first/: SKILL.md
projects/portable-assistant/src/portable_assistant/: __init__.py  cli.py  config.py  memory.py  providers.py  router.py  skills.py
projects/portable-assistant/tests/: test_core.py
projects/sleep-sense/: README.md
projects/sleep-sense/android/: settings.gradle.kts
projects/wechat-flow-agent/: .gitignore  README.md  pyproject.toml
projects/wechat-flow-agent/data/: demo_messages.json
projects/wechat-flow-agent/docs/: architecture.md
projects/wechat-flow-agent/tests/: test_analyzer.py
projects/wechat-flow-agent/web/: index.html
projects/wechat-flow-agent/wechat_flow_agent/: __init__.py  analyzer.py  app.py  cli.py  domain.py  io.py
projects/wps-mac-reader-addon/: README.md  install.sh  package.json  uninstall.sh
tools/kuaidi-oneclick/: .gitignore  README.md  config.example.json  ship.py
(+31 files in other folders)
