[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "etap-low-voltage-agent"
version = "0.1.0"
description = "ETAP low-voltage study automation and scenario ranking PoC"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
etap-lv = "etap_lv.cli:main"

[tool.setuptools.packages.find]
include = ["etap_lv*"]
