[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-flow-agent"
version = "0.1.0"
description = "Local-first group chat information triage for Chinese work groups"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
wechat-flow = "wechat_flow_agent.cli:main"

[tool.setuptools.packages.find]
include = ["wechat_flow_agent*"]
